# CompanySite

./: .gitignore  README.md  pyproject.toml
app_system/: admin.py  models.py  serializers.py  views.py
app_system/migrations/: 0001_initial.py  0002_employee_check_in_time_employee_check_out_time_and_more.py  0003_remove_employee_check_in_time_and_more.py  0004_leave.py  0005_alter_leave_approved_by.py  0006_employee_user_alter_leave_approved_by.py  0007_transactioncategory_transaction.py  0008_employee_date_of_birth_document.py  0009_performancereview.py
backend/: settings.py  urls.py
frontend/: .gitignore  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AttendanceHistoryModal.tsx  Calendar.tsx  DepartmenDetails.tsx  DepartmentList.tsx  Documents.tsx  EmployeeDetails.tsx  EmployeeForm.tsx  EmployeeList.tsx  EmployeeReportsModal.tsx  FinanceDashboard.tsx  Home.tsx  LeaveManagement.tsx  LoginForm.tsx  PerformanceReview.tsx  SystemActions.tsx
scripts/: run.sh  setup.sh
